--- a/src/components/spinner/styles.css
+++ b/src/components/spinner/styles.css
@@ -1,12 +1,12 @@
 :root {
     --wheel-font: 'Lato', 'Quicksand', sans-serif;
-    --wheel-size: 400px;
+    --wheel-size: 358px;
     --wheel-slice-spacing: 5px;
     --wheel-border-size: 2px;
     --wheel-color: #832A4B;
     --neutral-color: white;
     --PI: 3.14159265358979;
-    --nb-item: 0;
+    --nb-item: 1;
     --item-nb: 0;
     --selected-item: 0;
     --nb-turn: 5;
@@ -57,7 +57,7 @@
     position: absolute;
     width: 22.45px;
     height: 28.06px;
-    left: 190.18px;
+    left: 169.18px;
     top: -16.2px;
     z-index: 200;
     border-top: solid 27px #FFDDA1;
@@ -70,7 +70,7 @@
     position: absolute;
     width: 34px;
     height: 6px;
-    left: 188.95px;
+    left: 167.18px;
     top: -16.2px;
     background: #FFDDA1;
     border-radius: 2px;
@@ -146,7 +146,7 @@
     padding-left: 0px;
     opacity: 0.25;
     --slice-max-width: calc(var(--PI) * var(--wheel-size) + var(--wheel-size) / 2);
-    --slice-width: calc((var(--slice-max-width) / var(--nb-item)) - var(--wheel-slice-spacing));
+    --slice-width: calc((var(--slice-max-width) / var(--nb-item, 1)) - var(--wheel-slice-spacing));
     border: solid transparent calc(var(--slice-width) / 2);
     border-left: solid transparent 0;
     border-right: solid var(--neutral-color) calc(var(--wheel-size) / 2);
