--- a/src/components/spinner/styles.css
+++ b/src/components/spinner/styles.css
@@ -154,8 +154,8 @@
     --slice-max-width: calc(var(--PI) * var(--wheel-size) + var(--wheel-size) / 2);
     --slice-width: calc((var(--slice-max-width) / var(--nb-item, 1)) - var(--wheel-slice-spacing));
     border: solid transparent calc(var(--slice-width) / 2);
-    border-left: solid transparent 0;
-    border-right: solid var(--neutral-color) calc(var(--wheel-size) / 2);
+    border-left: solid var(--color) 0;
+    border-right: solid var(--color) calc(var(--wheel-size) / 2);
   }
   
   .wheel-item:after {
